--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -46,6 +46,9 @@
   <link rel="stylesheet" href="./assests/css/style.css">
   <link rel="stylesheet" href="./assests/css/search.css">
   <link rel="stylesheet" href="./assests/css/card.css">
+  <link rel="stylesheet" href="./assests/css/admin.css">
+  <link rel="stylesheet" href="./assests/css/cart.css">
+  <link rel="stylesheet" href="./assests/css/login.css">
   <!-- HomePage (index page) -->
 
 </head>
